fix: accept '24:00' as midnight, remove required from int16 day fields, mirror lote request in response
