# docs/swagger.json
@@ -1026,10 +1026,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Escala"
-                            }
+                            "$ref": "#/definitions/model.CreateEscalaLoteResponse"
                         }
                     },
                     "400": {
@@ -2660,11 +2657,29 @@
                 }
             }
         },
+        "model.CreateEscalaLoteResponse": {
+            "type": "object",
+            "properties": {
+                "dias": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.DiaEscalaEntry"
+                    }
+                },
+                "posto_id": {
+                    "type": "string"
+                },
+                "tolerancia_min": {
+                    "type": "integer"
+                },
+                "usuario_id": {
+                    "type": "string"
+                }
+            }
+        },
         "model.CreateEscalaRequest": {
             "type": "object",
             "required": [
-                "dia_semana_fim",
-                "dia_semana_inicio",
                 "hora_fim",
                 "hora_inicio",
                 "posto_id",
@@ -2834,8 +2849,6 @@
         "model.DiaEscalaEntry": {
             "type": "object",
             "required": [
-                "dia_semana_fim",
-                "dia_semana_inicio",
                 "hora_fim",
                 "hora_inicio"
             ],
